Design and Evaluation Chapter

--- a/Final Documentation/Appendix/References.tex
+++ b/Final Documentation/Appendix/References.tex
@@ -35,6 +35,8 @@
 	
 	\bibitem{share} {\em SHARE - Sharing Hosted Autonomous Research Environments}, [Online]. Available: http://is.ieis.tue.nl/staff/pvgorp/share/
 	
+	\bibitem{virtualbox} {\em VM Virtual Box}, [Online]. Available: https://www.virtualbox.org/
+	
 	\bibitem{understanding-bx} A. Bucaioni and R. Eramo, {\em Understanding bidirectional transformations with TGGs and JTL}, In Proc. of the Second International Workshop on BX, 2013.
 	
 	\bibitem{modelsynchro-tgg} F. Hermann et al., {\em Model synchronization based on triple graph grammars: correctness, completeness and invertibility}, Software and Systems Modeling, vol. 14, pages 241-269, 2013.
@@ -74,6 +76,13 @@
 	\bibitem{servlet} J. Hunter and W. Crawford, {\em Java servlet programming}, vol. 37, 2001.
 	
 	\bibitem{funcandnonfuncreq} P. Sharma and S. Dhir, {\em Functional \& non-functional requirement elicitation and risk assessment for agile processes}. International Journal of Control Theory and Applications, vol. 9, pages 9005-9010, 2016.
+	
+	\bibitem{analysisprepostdesigns} P.L. Bonate, {\em Analysis of pretest posttest designs}, FL: Chapman \& Hall/CRC, pages 1-5, 2000.
+	
+	\bibitem{expandquasiexpdesign} D.T. Campbell \& J.C. Stanley, {\em Experimental and quasi-experimental designs for research }, In N. L. Gage (Ed.), Handbook of research on teaching. Chicago: Rand McNally, 1963.
+	
+	\bibitem{anovapreposttest} S.W. Huck \& R.A. McLean, Using a Repeated Measures ANOVA to Analyze the Data from a Pretest-Posttest Design: A Potentially Confusing Task, Psychological Bulletin. vol. 82, No. 4, pages 511-518, 1975. 
+	
 	
 \end{thebibliography}
 
