--- a/Final Documentation/Summary/Summary.tex
+++ b/Final Documentation/Summary/Summary.tex
@@ -2,9 +2,11 @@
 \subsection{Conclusion}\label{subsec:conclusion}
 Finding the limitations of the tool, benchmarx.
 \subsection{Future Work}\label{subsec:futurework}
-1. Another tool
-2. Another example
-3. Tool as a webservice
+1. New examples
+2. New Rulesets
+3. Another tool
+4. Tool as a webservice
+5. New experiment -- only showing a video to the control grp
 
 
 
